# Kozmoworks

./: CMakeLists.txt  README.md
py/: animate_traj.py  luna_plotter.py  pos_plotter.py
scenarios/: luna_pointmass.json  luna_sphericalharmonics.json  test.json
src/: Atmosphere.cpp  Atmosphere.h  Body.cpp  Body.h  Maneuver.cpp  Maneuver.h  Matrix3x3.h  Output.cpp  Output.h  RadiationPressure.cpp  RadiationPressure.h  RigidBody.cpp  RigidBody.h  Solver.cpp  Solver.h  SphericalHarmonics.cpp  SphericalHarmonics.h  Vector3.cpp  Vector3.h  Vessel.h  constants.cpp  constants.h  main.cpp
